tests/derive_compile_fail/non_gc_safe.stderr
error[E0277]: the trait bound `NotGcSafe: GcSafe` is not satisfied
 --> $DIR/non_gc_safe.rs:6:10
  |
6 | #[derive(Scan)]
  |          ^^^^ expected an implementor of trait `GcSafe`
  |
  = note: required because of the requirements on the impl of `GcSafe` for `NotGcSafe`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
